--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2293,7 +2293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "RA",
    "language": "python",
    "name": "python3"
   },
@@ -2307,11 +2307,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12 (main, Jun  1 2022, 06:36:29) \n[Clang 12.0.0 ]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+    "hash": "ca7f45541fad36dc875cb47b26f6c949ec9d4f3ea0a0a2efad526e1bff7d8b65"
    }
   }
  },
