--- a/Sandbox/Model Optimisation.ipynb
+++ b/Sandbox/Model Optimisation.ipynb
@@ -2,13 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-25T04:34:11.997693Z",
-     "start_time": "2023-05-25T04:34:09.036395Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import load, linspace\n",
@@ -18,10 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "db_manager = HLDatabase()\n",
+    "db_manager = HLDatabase(bWorkLaptop=True)\n",
     "pollution = db_manager.get_table(table_name='Train-Pollution')\n",
     "pollution.set_index('Date', inplace=True, drop=True)\n",
     "mSpatial = db_manager.get_table(table_name='Train-Weight Matrix')\n",
@@ -31,11 +26,7 @@
     "tZ = load(r\"../DTO/train_tZ.npy\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-25T04:34:12.244344Z",
-     "start_time": "2023-05-25T04:34:12.002058Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -57,14 +48,27 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "tZ_1 = tZ[8000:9000, :, :]\n",
+    "pollution_1 = pollution.values[8000:9000, :]\n",
+    "tWind_1 = tWind[8000:9000, :, :]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "optimizer = QMLEOptimizerWithZetaGridSearch(\n",
     "    initial_params=initial_params,\n",
     "    bounds=bounds,\n",
     "    zeta_values=zeta_values,\n",
     "    weight_matrix=mSpatial,\n",
-    "    wind_tensor=tWind,\n",
-    "    exog=pollution,\n",
-    "    Z=tZ\n",
+    "    wind_tensor=tWind_1,\n",
+    "    exog=pollution_1,\n",
+    "    Z=tZ_1\n",
     ")\n",
     "\n",
     "optimizer.fit()\n",
