--- a/Sandbox/Model Optimisation.ipynb
+++ b/Sandbox/Model Optimisation.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-25T20:05:07.142261Z",
+     "start_time": "2023-05-25T20:05:04.877450Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-25 22:05:06,556 - numexpr.utils - INFO - NumExpr defaulting to 8 threads.\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy import load, linspace\n",
     "from SpiPy.Models.SAR import *\n",
@@ -13,10 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "db_manager = HLDatabase(bWorkLaptop=True)\n",
+    "db_manager = HLDatabase(bWorkLaptop=False)\n",
     "pollution = db_manager.get_table(table_name='Train-Pollution')\n",
     "pollution.set_index('Date', inplace=True, drop=True)\n",
     "mSpatial = db_manager.get_table(table_name='Train-Weight Matrix')\n",
@@ -26,26 +39,34 @@
     "tZ = load(r\"../DTO/train_tZ.npy\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-25T20:05:07.301347Z",
+     "start_time": "2023-05-25T20:05:07.147060Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "N = len(pollution.columns)\n",
-    "initial_params = [0.5]*N + [0.2] + [0.5] + list(pollution.var().values)\n",
-    "bounds = [(-1, 1)]*N + [(-1, 1)] + [(0, 1)] + [(1, 1000)]*N\n",
+    "initial_params = [0.5]*N + [0.2] + [0.5] + list(pollution.var().values) + [0.5]\n",
+    "bounds = [(-1, 1)]*N + [(-1, 1)] + [(0, 1)] + [(1, 1000)]*N + [(0, 1)]\n",
     "zeta_values = linspace(0, 1, 11)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-25T20:05:07.308858Z",
+     "start_time": "2023-05-25T20:05:07.303729Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "tZ_1 = tZ[8000:9000, :, :]\n",
@@ -53,7 +74,11 @@
     "tWind_1 = tWind[8000:9000, :, :]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-25T20:05:07.315406Z",
+     "start_time": "2023-05-25T20:05:07.310700Z"
+    }
    }
   },
   {
@@ -61,14 +86,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "optimizer = QMLEOptimizerWithZetaGridSearch(\n",
+    "optimizer = QMLEOptimizer(\n",
     "    initial_params=initial_params,\n",
     "    bounds=bounds,\n",
-    "    zeta_values=zeta_values,\n",
     "    weight_matrix=mSpatial,\n",
     "    wind_tensor=tWind_1,\n",
     "    exog=pollution_1,\n",
-    "    Z=tZ_1\n",
+    "    Z=tZ_1,\n",
+    "    method='DE'\n",
     ")\n",
     "\n",
     "optimizer.fit()\n",
