--- a/Sandbox/Model Optimisation.ipynb
+++ b/Sandbox/Model Optimisation.ipynb
@@ -2,47 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-25T20:05:07.142261Z",
-     "start_time": "2023-05-25T20:05:04.877450Z"
+     "end_time": "2023-05-27T17:08:29.210674Z",
+     "start_time": "2023-05-27T17:08:28.254474Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-25 22:05:06,556 - numexpr.utils - INFO - NumExpr defaulting to 8 threads.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from numpy import load, linspace\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels.api as sm\n",
     "from SpiPy.Models.SAR import *\n",
-    "from DTO.Database import *"
+    "from DTO.Database import *\n",
+    "from numpy import load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "db_manager = HLDatabase(bWorkLaptop=False)\n",
     "pollution = db_manager.get_table(table_name='Train-Pollution')\n",
-    "pollution.set_index('Date', inplace=True, drop=True)\n",
+    "# pollution.drop(labels='Da', axis=1, inplace=True)\n",
     "mSpatial = db_manager.get_table(table_name='Train-Weight Matrix')\n",
-    "mSpatial = mSpatial.drop(labels='index', axis=1)\n",
+    "mSpatial.drop(labels='index', axis=1, inplace=True)\n",
     "\n",
     "tWind = load(r\"../DTO/train_tWind.npy\")\n",
-    "tZ = load(r\"../DTO/train_tZ.npy\")"
+    "tZ = load(r\"../DTO/train_tY.npy\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-25T20:05:07.301347Z",
-     "start_time": "2023-05-25T20:05:07.147060Z"
+     "end_time": "2023-05-27T17:07:24.043177Z",
+     "start_time": "2023-05-27T17:07:23.896249Z"
     }
    }
   },
@@ -52,15 +46,20 @@
    "outputs": [],
    "source": [
     "N = len(pollution.columns)\n",
-    "initial_params = [0.5]*N + [0.2] + [0.5] + list(pollution.var().values) + [0.5]\n",
-    "bounds = [(-1, 1)]*N + [(-1, 1)] + [(0, 1)] + [(1, 1000)]*N + [(0, 1)]\n",
-    "zeta_values = linspace(0, 1, 11)"
+    "initial_params = [0.19, -0.20, 0.31, -0.43, 0.50, -0.66, 0.44]\n",
+    "initial_params += list(pollution.var().values)\n",
+    "initial_params += list(pollution.mean().values)\n",
+    "initial_params += [0.21]\n",
+    "initial_params += [-0.8]\n",
+    "initial_params += [0.33]\n",
+    "initial_params += [2.00]\n",
+    "initial_params += [5.05]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-25T20:05:07.308858Z",
-     "start_time": "2023-05-25T20:05:07.303729Z"
+     "end_time": "2023-05-27T14:16:55.703674Z",
+     "start_time": "2023-05-27T14:16:55.694086Z"
     }
    }
   },
@@ -69,15 +68,19 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "tZ_1 = tZ[8000:9000, :, :]\n",
-    "pollution_1 = pollution.values[8000:9000, :]\n",
-    "tWind_1 = tWind[8000:9000, :, :]"
+    "bounds = [(-1, 1)] * N               # Phi\n",
+    "bounds += [(1, 1000)] * N            # Sigma\n",
+    "bounds += [(0, 1000)] * N            # Mu\n",
+    "bounds += [(-100, 100)]              # Alpha\n",
+    "bounds += [(-100, 100)]              # Rho\n",
+    "bounds += [(0, 1)]                   # Zeta\n",
+    "bounds += [(-100, 100)] * 2          # Beta and Gamma"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-25T20:05:07.315406Z",
-     "start_time": "2023-05-25T20:05:07.310700Z"
+     "end_time": "2023-05-27T14:16:55.708917Z",
+     "start_time": "2023-05-27T14:16:55.702875Z"
     }
    }
   },
@@ -88,23 +91,24 @@
    "source": [
     "optimizer = QMLEOptimizer(\n",
     "    initial_params=initial_params,\n",
-    "    bounds=bounds,\n",
     "    weight_matrix=mSpatial,\n",
-    "    wind_tensor=tWind_1,\n",
-    "    exog=pollution_1,\n",
-    "    Z=tZ_1,\n",
-    "    method='DE'\n",
+    "    wind_tensor=tWind,\n",
+    "    exog=pollution,\n",
+    "    bounds=bounds,\n",
     ")\n",
     "\n",
     "optimizer.fit()\n",
     "best_params = optimizer.get_best_params()\n",
     "\n",
     "print(\"Best Parameters:\")\n",
-    "print(\"alpha:\", best_params[N])\n",
-    "print(\"rho:\", best_params[N+1])\n",
-    "print(\"zeta:\", best_params[-1])\n",
-    "print(\"phi:\", best_params[:N])\n",
-    "print(\"Sigma:\", best_params[N+2:-1])"
+    "print(\"Alpha:\",      best_params[-5])\n",
+    "print(\"Rho:\",        best_params[-4])\n",
+    "print(\"Zeta:\",       best_params[-3])\n",
+    "print(\"Beta:\",       best_params[-2])\n",
+    "print(\"Gamma:\",      best_params[-1])\n",
+    "print(\"Phi:\",        best_params[:N])\n",
+    "print(\"Sigma:\",   best_params[N:2*N])\n",
+    "print(\"Mu:\",    best_params[2*N:3*N])"
    ],
    "metadata": {
     "collapsed": false
